--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                         <li><strong>/vsb</strong> <span>Send a VIP-Broadcast to everyone online!</span></li>
                     </ul>
                 </div>
-                <a href="https://paypal.me/Growfax/0.7" target="_blank" rel="noopener" class="btn-purchase" data-role="vip" data-price="0.7">Purchase VIP</a>
+                <a href="https://paypal.me/Growfax/0.7USD" target="_blank" rel="noopener" class="btn-purchase" data-role="vip" data-price="0.7">Purchase VIP</a>
             </div>
 
             <div class="shop-role-card">
@@ -566,7 +566,7 @@
                         <li><span>All VIP commands included!</span></li>
                     </ul>
                 </div>
-                <a href="https://paypal.me/Growfax/1.2" target="_blank" rel="noopener" class="btn-purchase" data-role="vip+" data-price="1.2">Purchase VIP+</a>
+                <a href="https://paypal.me/Growfax/1.2USD" target="_blank" rel="noopener" class="btn-purchase" data-role="vip+" data-price="1.2">Purchase VIP+</a>
             </div>
 
             <div class="shop-role-card">
@@ -576,7 +576,7 @@
                     <ul id="moderator_commands">
                         </ul>
                 </div>
-                <a href="https://paypal.me/Growfax/2.5" target="_blank" rel="noopener" class="btn-purchase" data-role="moderator" data-price="2.5">Purchase Moderator</a>
+                <a href="https://paypal.me/Growfax/2.5USD" target="_blank" rel="noopener" class="btn-purchase" data-role="moderator" data-price="2.5">Purchase Moderator</a>
             </div>
 
             <div class="shop-role-card">
@@ -586,7 +586,7 @@
                     <ul id="super_moderator_commands">
                         </ul>
                 </div>
-                <a href="https://paypal.me/Growfax/3.2" target="_blank" rel="noopener" class="btn-purchase" data-role="super_moderator" data-price="3.2">Purchase Super Moderator</a>
+                <a href="https://paypal.me/Growfax/3.2USD" target="_blank" rel="noopener" class="btn-purchase" data-role="super_moderator" data-price="3.2">Purchase Super Moderator</a>
             </div>
 
             <div class="shop-role-card">
@@ -596,7 +596,7 @@
                     <ul id="developer_commands">
                         </ul>
                 </div>
-                <a href="https://paypal.me/Growfax/6.5" target="_blank" rel="noopener" class="btn-purchase" data-role="developer" data-price="6.5">Purchase Developer</a>
+                <a href="https://paypal.me/Growfax/6.5USD" target="_blank" rel="noopener" class="btn-purchase" data-role="developer" data-price="6.5">Purchase Developer</a>
             </div>
 
             <div class="shop-role-card">
@@ -606,7 +606,7 @@
                     <ul id="god_commands">
                         </ul>
                 </div>
-                <a href="https://paypal.me/Growfax/8.6" target="_blank" rel="noopener" class="btn-purchase" data-role="god" data-price="8.6">Purchase GOD</a>
+                <a href="https://paypal.me/Growfax/8.6USD" target="_blank" rel="noopener" class="btn-purchase" data-role="god" data-price="8.6">Purchase GOD</a>
             </div>
         </div>
     </section>
@@ -1256,7 +1256,7 @@
 
     toggleServerStatus.textContent = lang === 'id' ? (translations.id["Toggle Status (Simulate)"] || 'Ubah Status (Simulasi)') : 'Toggle Status (Simulate)';
     saveNewsUpdate.textContent = lang === 'id' ? (translations.id["Save News"] || 'Simpan Berita') : 'Save News';
-    saveSeoMeta.textContent = lang === 'id' ? (translations.id["Update SEO Meta"] || 'Perbarui Meta SEO') : 'Update Meta SEO';
+    saveSeoMeta.textContent = lang === 'id' ? (translations.id["Update SEO Meta"] || 'Perbarui Meta SEO') : 'Update SEO Meta';
     closeAdmin.textContent = lang === 'id' ? (translations.id["Close Admin Area"] || 'Tutup Area Admin') : 'Close Admin Area';
 
     // Refresh analytics data to update language on dynamic strings
