--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   .report-bug-btn:hover, .theme-toggle:hover, .open-welcome:hover, #openAdmin:hover {
     background: rgba(0,0,0,0.05);
   }
-  [data-theme="dark"] .report-bug-btn:hover, [data-theme="dark"] .theme-toggle:hover, [data-theme="dark"] .open-welcome:hover, [data-theme="dark"] #openAdmin:hover {
+  [data-theme="dark"] .report-bug-btn:hover, [data-theme="dark"] .theme-toggle:hover, [data-theme="dark"] .open-welcome:hover, [data-theme="dark"] .#openAdmin:hover {
     background: rgba(255,255,255,0.05);
   }
 
@@ -634,13 +634,13 @@
                     </ul>
                 </div>
                 <div class="purchase-buttons">
-                    <a href="https://paypal.me/Growfax/0.7USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="vip" data-price="0.7">Pay $USD</a>
-                    <a href="https://paypal.me/Growfax/0.64EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="vip" data-price-eur="0.64">Pay €EUR</a>
-                    <a href="https://paypal.me/Growfax/0.56GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="vip" data-price-gbp="0.56">Pay £GBP</a>
-                    <a href="https://paypal.me/Growfax/1.05AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="vip" data-price-aud="1.05">Pay A$AUD</a>
-                    <a href="https://paypal.me/Growfax/0.95SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="vip" data-price-sgd="0.95">Pay S$SGD</a>
-                    <a href="https://paypal.me/Growfax/0.95CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="vip" data-price-cad="0.95">Pay C$CAD</a>
-                    <a href="https://paypal.me/Growfax/10500IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="vip" data-idr-price="10500">Bayar Rp IDR</a>
+                    <a href="https://paypal.me/BilzXd1/0.7USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="vip" data-price="0.7">Pay $USD</a>
+                    <a href="https://paypal.me/BilzXd1/0.64EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="vip" data-price-eur="0.64">Pay €EUR</a>
+                    <a href="https://paypal.me/BilzXd1/0.56GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="vip" data-price-gbp="0.56">Pay £GBP</a>
+                    <a href="https://paypal.me/BilzXd1/1.05AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="vip" data-price-aud="1.05">Pay A$AUD</a>
+                    <a href="https://paypal.me/BilzXd1/0.95SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="vip" data-price-sgd="0.95">Pay S$SGD</a>
+                    <a href="https://paypal.me/BilzXd1/0.95CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="vip" data-price-cad="0.95">Pay C$CAD</a>
+                    <a href="https://paypal.me/BilzXd1/10500IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="vip" data-idr-price="10500">Bayar Rp IDR</a>
                 </div>
             </div>
 
@@ -663,13 +663,13 @@
                     </ul>
                 </div>
                 <div class="purchase-buttons">
-                    <a href="https://paypal.me/Growfax/1.2USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="vip+" data-price="1.2">Pay $USD</a>
-                    <a href="https://paypal.me/Growfax/1.10EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="vip+" data-price-eur="1.10">Pay €EUR</a>
-                    <a href="https://paypal.me/Growfax/0.96GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="vip+" data-price-gbp="0.96">Pay £GBP</a>
-                    <a href="https://paypal.me/Growfax/1.80AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="vip+" data-price-aud="1.80">Pay A$AUD</a>
-                    <a href="https://paypal.me/Growfax/1.62SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="vip+" data-price-sgd="1.62">Pay S$SGD</a>
-                    <a href="https://paypal.me/Growfax/1.62CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="vip+" data-price-cad="1.62">Pay C$CAD</a>
-                    <a href="https://paypal.me/Growfax/18000IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="vip+" data-idr-price="18000">Bayar Rp IDR</a>
+                    <a href="https://paypal.me/BilzXd1/1.2USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="vip+" data-price="1.2">Pay $USD</a>
+                    <a href="https://paypal.me/BilzXd1/1.10EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="vip+" data-price-eur="1.10">Pay €EUR</a>
+                    <a href="https://paypal.me/BilzXd1/0.96GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="vip+" data-price-gbp="0.96">Pay £GBP</a>
+                    <a href="https://paypal.me/BilzXd1/1.80AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="vip+" data-price-aud="1.80">Pay A$AUD</a>
+                    <a href="https://paypal.me/BilzXd1/1.62SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="vip+" data-price-sgd="1.62">Pay S$SGD</a>
+                    <a href="https://paypal.me/BilzXd1/1.62CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="vip+" data-price-cad="1.62">Pay C$CAD</a>
+                    <a href="https://paypal.me/BilzXd1/18000IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="vip+" data-idr-price="18000">Bayar Rp IDR</a>
                 </div>
             </div>
 
@@ -689,13 +689,13 @@
                         </ul>
                 </div>
                 <div class="purchase-buttons">
-                    <a href="https://paypal.me/Growfax/2.5USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="moderator" data-price="2.5">Pay $USD</a>
-                    <a href="https://paypal.me/Growfax/2.30EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="moderator" data-price-eur="2.30">Pay €EUR</a>
-                    <a href="https://paypal.me/Growfax/2.00GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="moderator" data-price-gbp="2.00">Pay £GBP</a>
-                    <a href="https://paypal.me/Growfax/3.75AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="moderator" data-price-aud="3.75">Pay A$AUD</a>
-                    <a href="https://paypal.me/Growfax/3.38SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="moderator" data-price-sgd="3.38">Pay S$SGD</a>
-                    <a href="https://paypal.me/Growfax/3.38CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="moderator" data-price-cad="3.38">Pay C$CAD</a>
-                    <a href="https://paypal.me/Growfax/37500IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="moderator" data-idr-price="37500">Bayar Rp IDR</a>
+                    <a href="https://paypal.me/BilzXd1/2.5USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="moderator" data-price="2.5">Pay $USD</a>
+                    <a href="https://paypal.me/BilzXd1/2.30EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="moderator" data-price-eur="2.30">Pay €EUR</a>
+                    <a href="https://paypal.me/BilzXd1/2.00GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="moderator" data-price-gbp="2.00">Pay £GBP</a>
+                    <a href="https://paypal.me/BilzXd1/3.75AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="moderator" data-price-aud="3.75">Pay A$AUD</a>
+                    <a href="https://paypal.me/BilzXd1/3.38SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="moderator" data-price-sgd="3.38">Pay S$SGD</a>
+                    <a href="https://paypal.me/BilzXd1/3.38CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="moderator" data-price-cad="3.38">Pay C$CAD</a>
+                    <a href="https://paypal.me/BilzXd1/37500IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="moderator" data-idr-price="37500">Bayar Rp IDR</a>
                 </div>
             </div>
 
@@ -715,13 +715,13 @@
                         </ul>
                 </div>
                 <div class="purchase-buttons">
-                    <a href="https://paypal.me/Growfax/3.2USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="super_moderator" data-price="3.2">Pay $USD</a>
-                    <a href="https://paypal.me/Growfax/2.94EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="super_moderator" data-price-eur="2.94">Pay €EUR</a>
-                    <a href="https://paypal.me/Growfax/2.56GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="super_moderator" data-price-gbp="2.56">Pay £GBP</a>
-                    <a href="https://paypal.me/Growfax/4.80AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="super_moderator" data-price-aud="4.80">Pay A$AUD</a>
-                    <a href="https://paypal.me/Growfax/4.32SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="super_moderator" data-price-sgd="4.32">Pay S$SGD</a>
-                    <a href="https://paypal.me/Growfax/4.32CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="super_moderator" data-price-cad="4.32">Pay C$CAD</a>
-                    <a href="https://paypal.me/Growfax/48000IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="super_moderator" data-idr-price="48000">Bayar Rp IDR</a>
+                    <a href="https://paypal.me/BilzXd1/3.2USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="super_moderator" data-price="3.2">Pay $USD</a>
+                    <a href="https://paypal.me/BilzXd1/2.94EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="super_moderator" data-price-eur="2.94">Pay €EUR</a>
+                    <a href="https://paypal.me/BilzXd1/2.56GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="super_moderator" data-price-gbp="2.56">Pay £GBP</a>
+                    <a href="https://paypal.me/BilzXd1/4.80AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="super_moderator" data-price-aud="4.80">Pay A$AUD</a>
+                    <a href="https://paypal.me/BilzXd1/4.32SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="super_moderator" data-price-sgd="4.32">Pay S$SGD</a>
+                    <a href="https://paypal.me/BilzXd1/4.32CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="super_moderator" data-price-cad="4.32">Pay C$CAD</a>
+                    <a href="https://paypal.me/BilzXd1/48000IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="super_moderator" data-idr-price="48000">Bayar Rp IDR</a>
                 </div>
             </div>
 
@@ -741,13 +741,13 @@
                         </ul>
                 </div>
                 <div class="purchase-buttons">
-                    <a href="https://paypal.me/Growfax/6.5USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="developer" data-price="6.5">Pay $USD</a>
-                    <a href="https://paypal.me/Growfax/5.98EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="developer" data-price-eur="5.98">Pay €EUR</a>
-                    <a href="https://paypal.me/Growfax/5.20GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="developer" data-price-gbp="5.20">Pay £GBP</a>
-                    <a href="https://paypal.me/Growfax/9.75AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="developer" data-price-aud="9.75">Pay A$AUD</a>
-                    <a href="https://paypal.me/Growfax/8.78SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="developer" data-price-sgd="8.78">Pay S$SGD</a>
-                    <a href="https://paypal.me/Growfax/8.78CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="developer" data-price-cad="8.78">Pay C$CAD</a>
-                    <a href="https://paypal.me/Growfax/97500IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="developer" data-idr-price="97500">Bayar Rp IDR</a>
+                    <a href="https://paypal.me/BilzXd1/6.5USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="developer" data-price="6.5">Pay $USD</a>
+                    <a href="https://paypal.me/BilzXd1/5.98EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="developer" data-price-eur="5.98">Pay €EUR</a>
+                    <a href="https://paypal.me/BilzXd1/5.20GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="developer" data-price-gbp="5.20">Pay £GBP</a>
+                    <a href="https://paypal.me/BilzXd1/9.75AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="developer" data-price-aud="9.75">Pay A$AUD</a>
+                    <a href="https://paypal.me/BilzXd1/8.78SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="developer" data-price-sgd="8.78">Pay S$SGD</a>
+                    <a href="https://paypal.me/BilzXd1/8.78CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="developer" data-price-cad="8.78">Pay C$CAD</a>
+                    <a href="https://paypal.me/BilzXd1/97500IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="developer" data-idr-price="97500">Bayar Rp IDR</a>
                 </div>
             </div>
 
@@ -767,13 +767,13 @@
                         </ul>
                 </div>
                 <div class="purchase-buttons">
-                    <a href="https://paypal.me/Growfax/8.6USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="god" data-price="8.6">Pay $USD</a>
-                    <a href="https://paypal.me/Growfax/7.91EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="god" data-price-eur="7.91">Pay €EUR</a>
-                    <a href="https://paypal.me/Growfax/6.88GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="god" data-price-gbp="6.88">Pay £GBP</a>
-                    <a href="https://paypal.me/Growfax/12.90AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="god" data-price-aud="12.90">Pay A$AUD</a>
-                    <a href="https://paypal.me/Growfax/11.61SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="god" data-price-sgd="11.61">Pay S$SGD</a>
-                    <a href="https://paypal.me/Growfax/11.61CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="god" data-price-cad="11.61">Pay C$CAD</a>
-                    <a href="https://paypal.me/Growfax/129000IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="god" data-idr-price="129000">Bayar Rp IDR</a>
+                    <a href="https://paypal.me/BilzXd1/8.6USD" target="_blank" rel="noopener" class="btn-purchase btn-usd" data-role="god" data-price="8.6">Pay $USD</a>
+                    <a href="https://paypal.me/BilzXd1/7.91EUR" target="_blank" rel="noopener" class="btn-purchase btn-eur" data-role="god" data-price-eur="7.91">Pay €EUR</a>
+                    <a href="https://paypal.me/BilzXd1/6.88GBP" target="_blank" rel="noopener" class="btn-purchase btn-gbp" data-role="god" data-price-gbp="6.88">Pay £GBP</a>
+                    <a href="https://paypal.me/BilzXd1/12.90AUD" target="_blank" rel="noopener" class="btn-purchase btn-aud" data-role="god" data-price-aud="12.90">Pay A$AUD</a>
+                    <a href="https://paypal.me/BilzXd1/11.61SGD" target="_blank" rel="noopener" class="btn-purchase btn-sgd" data-role="god" data-price-sgd="11.61">Pay S$SGD</a>
+                    <a href="https://paypal.me/BilzXd1/11.61CAD" target="_blank" rel="noopener" class="btn-purchase btn-cad" data-role="god" data-price-cad="11.61">Pay C$CAD</a>
+                    <a href="https://paypal.me/BilzXd1/129000IDR" target="_blank" rel="noopener" class="btn-purchase btn-idr" data-role="god" data-idr-price="129000">Bayar Rp IDR</a>
                 </div>
             </div>
         </div>
